--- a/css/new.css
+++ b/css/new.css
@@ -5892,7 +5892,7 @@ textarea.form-control {
     -webkit-transform: none;
     -ms-transform: none;
     transform: none;
-    background-color: #fff;
+    background-color: #161625;
     border-radius: 0;
     -webkit-box-shadow: none;
     box-shadow: none
