--- a/css/new.css
+++ b/css/new.css
@@ -5010,7 +5010,7 @@ h5 {
 .resume-wrap {
     width: 100%;
     margin-bottom: 30px;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
     padding-bottom: 10px
 }
 
